# QmClient

./: .gitignore  .gitmodules  .typos.toml  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTING_zh.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  README_zh.md
.cargo/: config.toml
.github/workflows/: build.yml
.trae/rules/: coding-rules.md  rust-guidelines.md  superpowers-zh.md
cmake/: FindGLEW.cmake  FindVulkan.cmake  FindWebP.cmake
data/: input_overlay.json
data/input overlay-Zac/: mouse.json  wasd.json  参数.txt
data/languages/: arabic.txt  azerbaijani.txt  belarusian.txt  bosnian.txt  brazilian_portuguese.txt  bulgarian.txt  catalan.txt  chuvash.txt  czech.txt  danish.txt  dutch.txt  esperanto.txt  estonian.txt  finnish.txt  french.txt  galician.txt  german.txt  greek.txt  hungarian.txt  italian.txt  japanese.txt  korean.txt  kyrgyz.txt  norwegian.txt  persian.txt  polish.txt  portuguese.txt  romanian.txt  russian.txt  serbian.txt  serbian_cyrillic.txt  simplified_chinese.txt  simplified_chinese.txt.bak  slovak.txt  spanish.txt  swedish.txt  traditional_chinese.txt  turkish.txt  ukrainian.txt
data/maps/: fall.map  moonnight.map  sea.map
data/ui/: start_menu.rcss  start_menu.rml
datasrc/: content.py
docs/: ARCHITECTURE.md  UI_ENHANCEMENTS.md  UI_REFACTOR_SOLUTION_CN.md  index.html  info.json
qmclient_scripts/: check-rust.ps1  check_config_variables.py  check_header_guards.py  cmake-windows.cmd  darwin_fix_install_names.py  diff_update.py  export_settings_commands_table.py  fix_style.py  setup-opus.ps1  update.zsh
qmclient_scripts/languages_qmclient/: copy_fix_qmclient.py  twlang_qmclient.py  update_all_qmclient.py
qmclient_scripts/qmclient_center_server/: README.md  package-lock.json  server.js
src/android/: android_main.cpp  android_main.h
src/base/: crashdump.cpp  perf_timer.h  str.cpp  system.cpp
src/engine/: Cargo.toml  client.h  config.h  demo.h  friends.h  graphics.h  serverbrowser.h  textrender.h
src/game/: collision.cpp  localization.cpp  localization.h  version.h
src/macos/: notifications.mm
src/rust-bridge/voice/: Cargo.toml  build.rs
src/rust-bridge/voice/benches/: voice_benchmark.rs
src/rust-bridge/voice/src/: audio.rs  bridge.rs  codec.rs  dsp.rs  jitter.rs  lib.rs  lib_worker_ffi.rs  network.rs  spatial.rs  stats.rs  worker.rs
src/rust-bridge/voice/src/audio/: backend.rs  capture.rs  capture_queue.rs  engine.rs  mixer.rs  mod.rs  playback.rs  sdl_backend.rs
src/rust-bridge/voice/src/bridge/: mod.rs
src/rust-bridge/voice/src/codec/: adaptive.rs  mod.rs  opus.rs  opus_mock.rs
src/rust-bridge/voice/src/dsp/: aec.rs  agc.rs  compressor.rs  gain.rs  hpf.rs  limiter.rs  mod.rs  noise_suppress.rs  rnnoise.rs
src/rust-bridge/voice/src/jitter/: mod.rs
src/rust-bridge/voice/src/network/: bandwidth_estimator.rs  client.rs  mod.rs  protocol.rs  reliable.rs  server.rs
src/rust-bridge/voice/src/spatial/: mod.rs
src/rust-bridge/voice/src/worker/: context.rs
src/rust-bridge/voice/tests/: ffi_tests.rs  integration_tests.rs
src/test/: QmAnimTest.cpp  QmLayoutTest.cpp  (+18 more)
(+346 files in other folders)
