[package]
name = "ddnet-voice"
version = "0.0.1"
edition = "2021"
publish = false
license = "Zlib"

[lib]
crate-type = ["rlib", "staticlib"]
path = "src/lib.rs"

[features]
default = ["cpal-backend"]
cpal-backend = ["cpal"]
sdl-backend = []

[dependencies]
# 音频（双后端策略）
cpal = { version = "0.15", optional = true }  # 跨平台音频 I/O（首选）

# 编解码 - 纯 Rust Opus 实现
opus-rs = "0.1"                # 纯 Rust Opus 编解码器

# 异步运行时
tokio = { version = "1", features = ["net", "sync", "rt-multi-thread", "time", "macros"] }

# C++ 桥接
cxx = "1.0"

# 工具
crossbeam = "0.8"                # 跨线程 channel
parking_lot = "0.12"             # 高性能锁
log = "0.4"                      # 日志
thiserror = "1.0"                # 错误处理

[dev-dependencies]
criterion = "0.5"                # 性能基准测试
proptest = "1.4"                 # 属性测试

[build-dependencies]

[[bench]]
name = "voice_benchmark"
harness = false
