[package]
name = "ddnet-voice"
version = "0.0.1"
edition = "2021"
publish = false
license = "Zlib"

[lib]
crate-type = ["rlib", "staticlib"]
path = "src/lib.rs"

[features]
default = ["cpal-backend", "rnnoise"]
cpal-backend = ["cpal"]
sdl-backend = ["sdl2"]
rnnoise = ["nnnoiseless"]

[dependencies]
# 音频（双后端策略）
cpal = { version = "0.15", optional = true }  # 跨平台音频 I/O（首选）
sdl2 = { version = "0.37", optional = true }  # SDL2 音频后端（兼容性，需配置 SDL2_LIB_DIR）

# 编解码 - libopus 官方绑定
opus = "0.3"                     # libopus 官方绑定 (SNR 20-30dB)

# 降噪 - 纯 Rust RNNoise 实现
nnnoiseless = { version = "0.5", optional = true }  # RNNoise 纯 Rust 移植

# 异步运行时
tokio = { version = "1", features = ["net", "sync", "rt-multi-thread", "time", "macros"] }

# 工具
crossbeam = "0.8"                # 跨线程 channel
parking_lot = "0.12"             # 高性能锁
log = "0.4"                      # 日志
thiserror = "1.0"                # 错误处理

[dev-dependencies]
criterion = "0.5"                # 性能基准测试
proptest = "1.4"                 # 属性测试

[build-dependencies]

[[bench]]
name = "voice_benchmark"
harness = false
